--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <div class="greeting-widget-box">
   <div class="container">
-    <h1>Registration App</h1>
+    <h1>Registration Number App</h1>
     <p><b>Registration numbers format:</b></p>
     <ul>
       Gauteng: A-Z 12 GP,
