--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Registration App</title>
-   <link rel="stylesheet" href="registration_number.css">
-</head>
-<body>
-  {{{ body }}}
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="registration_number.css" />
+    <title>Registration Numbers Webapp</title>
+  </head>
+  <body>
+    {{{body}}}
+  </body>
 </html>
