--- a/public/registration_number.css
+++ b/public/registration_number.css
@@ -1,4 +1,3 @@
-/* https://coolors.co/palette/d8f3dc-b7e4c7-95d5b2-74c69d-52b788-40916c-2d6a4f-1b4332-081c15 */
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 * {
   margin: 0;
@@ -14,17 +13,24 @@ body {
 
 .error-msg,
 .error-text {
-  color: red;
-  font-size: 2rem;
-  font-weight: 700;
+  color: rgb(230, 4, 4);
+  font-size: 1px;
+  font-weight: 200;
 }
 .reg-format,
 label,
 .reg-num,
 .msg {
-  color: #d8f3dc;
+  color: #d8f3dc; 
   font-size: 2.2rem;
   font-weight: 700;
+}
+h1{
+  color: #d8f3dc; 
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 8px;
+  text-decoration: underline;
 }
 .msg {
   margin-bottom: 15px;
@@ -80,9 +86,8 @@ select {
 .number-plates-from {
   width: fit-content;
   padding: 10px;
-  background-color: #E5E4E2;
-  color: #d8f3dc;
-  border: 3px solid #555555;
+  color: #f0f3f1;
+  border: 3px solid #3b3b3b;
   margin-block: 15px;
   min-height: 27px;
   max-width: 400px;
